<resources>
    <string name="app_name">LearnIT</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="choose_gender">Choose gender</string>
    <string name="choose_user_level">Choose user level</string>
    <string name="already_account">Already have an account?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="success_registration">Registration completed successfully!</string>
    <string name="error_empty_fields">Please fill in all required fields.</string>
    <string name="select_photo">Add photo</string>
    <string name="user_exists">This username already exists, please change it.</string>
    <string name="full_name">Full Name</string>
    <string name="streaks">Streaks:</string>
    <string name="gender">Gender</string>
    <string name="user_level">User Level</string>
    <string name="submit">Submit</string>
    <string name="user_level_beginner">Beginner</string>
    <string name="next">next</string>
    <string name="required">Required</string>
    <string name="invalid_username_or_password">Invalid username or password.</string>
    <string name="streak_example">2</string>
    <string name="student_gmail">student@gmail.com</string>
    <string name="student">Student</string>
    <string name="welcome_back">Welcome to the LearnIT app</string>
    <string name="continue_learning">Continue learning:</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="please_select_an_answer">Please select an answer!</string>
    <string name="quiz_result">Quiz Result</string>
    <string name="your_score_is">Your score is: %1$s</string>
    <string name="are_you_sure_you_want_to_leave_the_quiz_your_progress_will_be_lost">Are you sure you want to leave the quiz? Your progress will be lost.</string>
    <string name="leave_quiz">Leave Quiz</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="this_lesson_is_completed">This lesson is completed!</string>
    <string name="message">Message</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="question">Question</string>
    <string name="verify">VERIFY</string>
    <string name="your_answers">Your answers:</string>
    <string name="see_results">Do you want to check out your quiz results?</string>
    <string name="description_text">Description text</string>
    <string name="quiz">Quiz</string>
    <string name="see_results_button">See results</string>
    <string name="read_more">Read more</string>
    <string name="let_s_start_learning">Let\'s Start Learning</string>
    <string name="you_haven_t_started_any_courses_yet">You haven\'t started any courses yet</string>
    <string name="theme_icon">Theme Icon</string>
    <string name="theme">Theme</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="general">General</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="send_email">Send email</string>
    <string name="enter_reset_code">Enter verification code</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="confirm_your_new_password">Confirm password</string>
    <string name="reset_password">Reset password</string>
    <string name="cancel">Cancel</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="notifications">Notifications</string>
    <string name="back_to_quiz">Back to quiz</string>
    <string name="back_to_lessons">Back to lessons</string>
    <string name="more">More</string>
    <string name="you_don_t_have_any_notifications_yet">You don\'t have any notifications yet.</string>
    <string name="score_0">Score: 0</string>
    <string name="_1_10">1/10</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="option_2">Option 2</string>
    <string name="option_1">Option 1</string>
    <string name="up">UP</string>
    <string name="concept_1">CONCEPT 1</string>
    <string name="down">DOWN</string>
    <string name="learn_it">LEARN IT</string>
    <string name="try_again">Try Again</string>
    <string name="no_internet_title">Ooops!</string>
    <string name="no_internet_description">Slow or no internet connection. Please check your internet connection and try again.</string>
    <string name="no_connection">The port we use is not responding in your area. Please switch to mobile internet and try again.</string>
    <string name="server_error_message">The server is not responding. We are already working on its restoration, please wait and try again.</string>
    <string name="example_question_text">In an array with a capacity of 100 and a size of 50, what is the index of the last element?</string>
    <string name="your_answer_49_99">Your answer: 49, 99</string>
    <string name="correctness_incorrect_correct_answer_s_49">Correctness: Incorrect, correct answer(s): 49</string>
    <string name="score_example">Score: 0</string>
    <string name="show_password">Show password</string>
    <string name="go_back">Go back</string>
    <string name="exist_quiz">Exist quiz</string>
    <string name="text_true">True</string>
    <string name="text_false">False</string>
    <string name="match_the_pairs">Match the pairs</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_select_left_side_first">Please select from left side first</string>
    <string name="please_select_all_pairs">Please match all the pairs\n</string>
    <string name="please_match_all_pairs">Please match all the pairs</string>
    <string name="select_right_button_first">Please select the pair of the left button firs</string>
    <string name="save">Save</string>
    <string name="admin">Admin</string>
    <string name="settings">Settings</string>
    <string name="courses">Courses</string>
    <string name="home">Home</string>
    <string name="accept">Accept\n</string>
    <string name="decline">Decline\n</string>
    <string name="status_icon">Status icon</string>
    <string name="teacher_requests">Teacher request status:</string>
    <string name="attention">Attention!</string>
    <string name="only_teachers_can_add_courses_to_request_access_please_provide_your_email_address_and_full_name_and_submit_the_required_documents">Only teachers can add courses. To request access, please provide your email address and full name, and submit the required documents.</string>
    <string name="email_address">Email Address</string>
    <string name="_0_255">0/255</string>
    <string name="course_description">Course description</string>
    <string name="pogramming_language">Pogramming language</string>
    <string name="course_name">Course name</string>
    <string name="add_new_course">Add new course</string>
    <string name="proceed_to_add_chapters">Proceed to add chapters</string>
    <string name="chapter_number">Chapter number:</string>
    <string name="chapter_name">Chapter name</string>
    <string name="chapter_description">Chapter description</string>
    <string name="add_new_chapter">Add new chapter</string>
    <string name="add_more_chapter">Add more chapter</string>
    <string name="proceed_to_add_lessons">Proceed to add lessons</string>
    <string name="add_new_lesson">Add New Lesson</string>
    <string name="proceed_to_add_content">Proceed to add content</string>
    <string name="add_more_lesson">Save and add more lesson</string>
    <string name="lesson_number">Lesson number:</string>
    <string name="lesson_name">Lesson name</string>
    <string name="lesson_description">Lesson description</string>
    <string name="lesson_type">Lesson type</string>
    <string name="lesson_tags">Lesson tags</string>
    <string name="add_lesson">Save and add lesson</string>
    <string name="chapters">Chapters</string>
    <string name="save_and_back_to_chapters">Save and back to chapters</string>
    <string name="save_and_add_content">Save and add content</string>
    <string name="edit_course">Edit course</string>
    <string name="edit_chapter">Edit chapter</string>
    <string name="edit_lesson">Edit lesson</string>
    <string name="content_url">Content URL</string>
    <string name="content_title">Content Title</string>
    <string name="content_description">Content Description</string>
    <string name="add_content_and_save">Save and add questions</string>
    <string name="content_type">Content Type:</string>
    <string name="enter_the_answer">Enter the answer</string>
    <string name="enter_your_question">Enter your question</string>
    <string name="true_text">True</string>
    <string name="false_text">False</string>
    <string name="add_pair">Add Pair</string>
    <string name="item">Item</string>
    <string name="item_s_pair">Item\'s Pair</string>
    <string name="add_item">Add Item</string>
    <string name="enter_item">Enter Item</string>
    <string name="group_1">Group 1</string>
    <string name="group_2">Group 2</string>
    <string name="group_title">Group Title</string>
    <string name="add_answer">Add answer</string>
    <string name="correct">Correct</string>
    <string name="select_question_type">Select question type:</string>
    <string name="make_pairs">Make pairs</string>
    <string name="edit">Edit</string>
    <string name="add_content">Add content</string>
    <string name="content_number">Content number</string>
    <string name="save_and_add_another">Save and add another</string>
    <string name="save_and_back_to_lessons">Save and back to lessons</string>
    <string name="edit_content">Edit Content</string>
    <string name="enter_url">Enter URL</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_description">Enter Description</string>
</resources>