<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dimen_15dp">

    <TextView
        android:id="@+id/dialogTitle"
        style="@style/title_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:gravity="center"
        android:text="@string/quiz_result" />

    <TextView
        android:id="@+id/dialogMessage"
        style="@style/subtitle_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:gravity="center"
        android:text="@string/message" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_80dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:importantForAccessibility="no"
        android:src="@drawable/graduation_creatures" />

    <Button
        android:id="@+id/okButton"
        style="@style/custom_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/ok"
        android:textSize="@dimen/dimen_16dp" />

</LinearLayout>