<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/noInternetImageView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_400dp"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:importantForAccessibility="no"
        android:padding="@dimen/dimen_40dp"
        android:src="@drawable/bug_fixing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTextView"
        style="@style/no_internet_title_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dimen_10dp"
        android:text="@string/no_internet_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/noInternetImageView" />

    <TextView
        android:id="@+id/descriptionTextView"
        style="@style/subtitle_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dimen_10dp"
        android:text="@string/server_error_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView" />

    <Button
        android:id="@+id/tryAgainButton"
        style="@style/verify_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_15dp"
        android:layout_marginEnd="@dimen/dimen_15dp"
        android:layout_marginBottom="@dimen/dimen_30dp"
        android:fontFamily="@font/baloo"
        android:text="@string/try_again"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>